...
    "Create your first flight to get started." : {

    },
    "Date" : {

    },
    "Delete" : {

    },
    "Delete Flight?" : {

    },
    "Discard" : {
...
    "Discard changes?" : {

    },
    "Distance Unit" : {

    },
    "Done" : {

    },
    "Drift" : {

    },
    "EARLY" : {
...
