...
                        withAnimation {
                            flightEditorConfig.presentAddFlight()
                        }
                    } label: {
                        Label("Add Item", systemImage: "plus")
                    }
                    .accessibilityIdentifier("addFlightButton")
                }
            }
            .navigationTitle("Flights")
        }
        .accessibilityIdentifier("ContentViewRoot")
    }
...
